deploy/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: fion-auth
    app.kubernetes.io/name: fion-auth
  name: fion-auth
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
  - host: auth.dev.fion-energy.com
    http:
      paths:
      - backend:
          service:
            name: fion-auth
            port:
              number: 80
        path: /
        pathType: Prefix
